--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@cloudinary/url-gen": "^1.12.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "flowbite-react": "^0.6.4",
     "formik": "^2.4.5",
-    "openai": "^4.0.0",
+    "openai": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
